--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,31 @@
+backcall==0.1.0
+blessings==1.6.1
+bpython==0.17.1
+certifi==2018.1.18
+chardet==3.0.4
+curtsies==0.3.0
+decorator==4.2.1
 Django==2.0.4
+django-filter==1.1.0
+djangorestframework==3.8.0
+greenlet==0.4.13
+idna==2.6
+ipdb==0.11
+ipython==6.3.0
+ipython-genutils==0.2.0
+jedi==0.11.1
+Markdown==2.6.11
+parso==0.1.1
+pexpect==4.4.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
 pytz==2018.3
+requests==2.18.4
+simplegeneric==0.8.1
+six==1.11.0
+traitlets==4.3.2
+typing==3.6.4
+urllib3==1.22
+wcwidth==0.1.7
