--- a/requirements.txt
+++ b/requirements.txt
@@ -9,18 +9,23 @@ Django==2.0.4
 django-filter==1.1.0
 djangorestframework==3.8.0
 greenlet==0.4.13
+gunicorn==19.7.1
 idna==2.6
 ipdb==0.11
 ipython==6.3.0
 ipython-genutils==0.2.0
 jedi==0.11.1
 Markdown==2.6.11
+numpy==1.14.2
+pandas==0.22.0
 parso==0.1.1
 pexpect==4.4.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
+psycopg2==2.7.4
 ptyprocess==0.5.2
 Pygments==2.2.0
+python-dateutil==2.7.2
 pytz==2018.3
 requests==2.18.4
 simplegeneric==0.8.1
