--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,4 @@ django-cors-headers==2.2.0
 xlrd==1.1.0
 django-rest-swagger==2.1.2
 djangorestframework-camel-case==0.2.0
+django-import-export==1.0.1
